# YAPCRPlayer

./: .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CORRESPONDING-SOURCE.md  LICENSE  README.md
PCRPlayer/: LICENSE.txt  PCRPlayer.sln  PeCaRecorder_Readme.txt  Readme.txt
PCRPlayer/PCRPlayer/: AsyncBufferingLoader.cpp  AsyncBufferingLoader.h  AudioRenderer.cpp  AudioRenderer.h  BBSCallback.cpp  BBSCallback.h  BBSDlg.cpp  BBSDlg.h  BBSManager.cpp  BBSManager.h  BBSOperator.cpp  BBSOperator.h  BBSRegex.cpp  BBSRegex.h  BBSSampleView.cpp  BBSSampleView.h  BBSSkin.cpp  BBSSkin.h  BaseBBS.cpp  BaseBBS.h  BaseBuilder.cpp  BaseBuilder.h  BaseHandler.h  BasePropDlg.cpp  BasePropDlg.h  BoxDlg.cpp  BoxDlg.h  BrowserDlg.cpp  BrowserDlg.h  BrowserDlgSub.cpp  BrowserHook.cpp  BrowserHook.h  BrowserMenu.cpp  BrowserMenu.h  ChannelDlg.cpp  ChannelDlg.h  ChannelSampleView.cpp  ChannelSampleView.h  CheckBoxStatusBar.cpp  CheckBoxStatusBar.h  (+276 more)
PCRPlayer/PCRPlayer/EVRCustom/: CoordGeom.cpp  D3DUtl.cpp  D3DUtl.h  DX9Shaders.cpp  DX9Shaders.h  EVRPresenter.h  Helpers.cpp  Helpers.h  PresentEngine.cpp  PresentEngine.h  Presenter.cpp  Presenter.h  Presenter_.cpp  _PresentEngine.cpp  _PresentEngine.h  scheduler.cpp  scheduler.h
PCRPlayer/PCRPlayer/EVRCustom/common/: logging.h  trace.h
PCRPlayer/PCRPlayer/Splitter/: AsyncReader.cpp  AsyncReader.h  BaseSplitter.cpp  BaseSplitter.h  BaseSplitterFile.cpp  BaseSplitterFile.h  BaseSplitterFileEx.cpp  BaseSplitterFileEx.h  DSUtil.cpp  DSUtil.h  FLVMetaData.cpp  FLVMetaData.h  FLVSplitter.cpp  FLVSplitter.h  GolombBuffer.cpp  IBitRateInfo.h  IBufferInfo.h  IKeyFrameInfo.h  MultiFiles.cpp  MultiFiles.h  moreuuids.h
cmake/: FindMpv.cmake
docs/: architecture-decisions.md  build.md  implementation-plan.md  m3-bbs-subplan.md  m4-display-subplan.md  m5-config-subplan.md  render-api-migration.md
licenses/: THIRD-PARTY-NOTICES.md
licenses/qt/: README.md
scripts/: fetch-mpv-dev.ps1  mirror-mpv-source.ps1  package-release.ps1
src/app/: CMakeLists.txt  app.qrc  app.rc
src/app/src/: about_dialog.cpp  about_dialog.h  action_id.cpp  action_id.h  action_registry.cpp  action_registry.h  board_title_bar.cpp  board_title_bar.h  display_modes.cpp  display_modes.h  main.cpp  main_window.cpp  main_window.h  media_source.h  res_html.cpp  res_html.h  res_input_bar.cpp  res_input_bar.h  res_list_pane.cpp  res_list_pane.h  res_popup.cpp  res_popup.h  restore_state.h  session_controller.cpp  session_controller.h  shortcut_keys.cpp  shortcut_keys.h  snapshot_filename.cpp  snapshot_filename.h  video_host_widget.cpp  video_host_widget.h  volume_state.h  window_geometry.cpp  window_geometry.h
src/bbs/: CMakeLists.txt
src/bbs/include/bbs/: bbs_session.h  board_url.h  charset.h  dat.h  dat_store.h  extract.h  fastest.h  models.h  post.h  setting.h  subject.h
src/bbs/src/: bbs_session.cpp  board_url.cpp  charset.cpp  dat.cpp  dat_store.cpp  extract.cpp  fastest.cpp  post.cpp  setting.cpp  subject.cpp
src/common/: CMakeLists.txt
src/common/include/common/: version.h
src/common/src/: version.cpp
src/config/: CMakeLists.txt
src/config/include/config/: config.h
src/config/src/: config_io.cpp
src/net/: CMakeLists.txt
src/net/include/net/: http_client.h  http_message.h
src/net/src/: http_client.cpp  http_message.cpp
src/peercast/: CMakeLists.txt
src/peercast/include/peercast/: channel_info.h  peercast_controller.h  peercast_url.h  stream_resolver.h
src/peercast/src/: channel_info.cpp  peercast_controller.cpp  peercast_url.cpp  stream_resolver.cpp
src/player/: CMakeLists.txt
src/player/include/player/: mpv_backend.h  watchdog.h
src/player/src/: mpv_backend.cpp  watchdog.cpp
tests/: CMakeLists.txt
tests/fixtures/bbs/jpnkn/: SETTING.TXT  subject.txt
tests/fixtures/bbs/shitaraba/: README.txt
tests/tst_bbs/: CMakeLists.txt  tst_bbs.cpp
tests/tst_config/: CMakeLists.txt  tst_config.cpp
tests/tst_display/: CMakeLists.txt  tst_display.cpp
tests/tst_net/: CMakeLists.txt  tst_net.cpp
tests/tst_peercast/: CMakeLists.txt  tst_peercast.cpp
tests/tst_shortcuts/: CMakeLists.txt  tst_shortcuts.cpp
tests/tst_watchdog/: CMakeLists.txt  tst_watchdog.cpp
